--- a/.classpath
+++ b/.classpath
@@ -2,24 +2,24 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="lib/ark-tweet-nlp-0.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/ejml-0.23.jar"/>
+	<classpathentry kind="lib" path="lib/javax.json-api-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-api-2.2.7.jar"/>
 	<classpathentry kind="lib" path="lib/jazzy-core-0.5.2.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/jollyday-0.4.7.jar"/>
 	<classpathentry kind="lib" path="lib/LibLINEAR-1.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/liblinear-1.92.jar"/>
 	<classpathentry kind="lib" path="lib/snowball-stemmers-1.0.0.jar"/>
-	<classpathentry kind="lib" path="lib/weka-3.7.10.jar"/>
-	<classpathentry kind="lib" path="lib/ejml-0.23.jar" sourcepath="D:/apache-maven-3.3.9/repository/com/googlecode/efficient-java-matrix-library/ejml/0.23/ejml-0.23-sources.jar"/>
-	<classpathentry kind="lib" path="lib/javax.json-api-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/jaxb-api-2.2.7.jar"/>
-	<classpathentry kind="lib" path="lib/joda-time-2.1.jar"/>
-	<classpathentry kind="lib" path="lib/jollyday-0.4.7.jar"/>
 	<classpathentry kind="lib" path="lib/stanford-corenlp-3.5.2-models.jar"/>
+	<classpathentry kind="lib" path="lib/stanford-corenlp-3.5.2.jar"/>
+	<classpathentry kind="lib" path="lib/webis-1.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/weka-3.7.10.jar"/>
 	<classpathentry kind="lib" path="lib/xalan-2.7.0.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl-2.8.0.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis-1.3.03.jar"/>
 	<classpathentry kind="lib" path="lib/xom-1.2.10.jar"/>
-	<classpathentry kind="lib" path="lib/stanford-corenlp-3.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/ark-tweet-nlp-0.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/webis-1.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
